[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/ui/EndGameMenu.gd" type="Script" id=1]

[node name="EndGameMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.164706 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -40.0
margin_right = 40.0
margin_bottom = 14.0
text = "Game Over"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = 20.0

[node name="NextLevelButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
text = "Next Level"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Retry"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Main Menu"

[connection signal="pressed" from="Panel/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
